--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.9.4",
+    "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
+    "next": "13.5.4",
+    "qs": "^6.11.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/qs": "^6.9.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "prettier": "3.0.3",
+    "typescript": "^5"
   }
 }
