--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.5.4",
     "qs": "^6.11.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-to-print": "^2.14.15"
   },
   "devDependencies": {
     "@types/node": "^20",
